--- a/src/sass/site/primary/_single.scss
+++ b/src/sass/site/primary/_single.scss
@@ -9,7 +9,7 @@
 .singular .entry-meta {
 	@include font-size( 1.2 );
 	text-transform: uppercase;
-	margin-bottom: 30px;
+	margin: 30px 0 30px;
 }
 
 .byline {
